--- a/portfolio/portfolio_app/templates/index.html
+++ b/portfolio/portfolio_app/templates/index.html
@@ -43,6 +43,12 @@
                 width: 10%;
             }
         }
+        @media only screen and (min-width: 1500px)
+        {
+            #slider{
+                width: 10%;
+            }
+        }
     </style>
 </head>
 <body class="stalebodyt">
