--- a/portfolio/portfolio_app/templates/partials/technical/links.html
+++ b/portfolio/portfolio_app/templates/partials/technical/links.html
@@ -14,5 +14,5 @@
     <a href="https://www.instagram.com/aryan_sawant_24/" target="_blank"><div><img src="../static/media/icons/6929237_instagram_icon.svg" alt="Instagram"></div></a>
     <a href="https://x.com/aryan22746" target="_blank"><div><img src="../static/media/icons/11053969_x_logo_twitter_new_brand_icon.svg" alt="Twitter" style="height: 40px;"></div></a>
     <div class="ctc"  onclick="copyDiscord()"><img src="../static/media/icons/8725815_discord_icon.svg" alt="Discord"></div>
-    <a href="https://www.reddit.com/user/aryan_sawant_/" target="_blank"><div><img src="../static/media/icons/3225187_app_logo_../static/media_popular_reddit_icon.svg" alt="reddit"></div></a>
+    <a href="https://www.reddit.com/user/aryan_sawant_/" target="_blank"><div><img src="../static/media/icons/3225187_reddit_icon" alt="reddit"></div></a>
 </div>
